--- a/views/createdeck.hbs
+++ b/views/createdeck.hbs
@@ -77,7 +77,7 @@
 
         <div class="field is-grouped">
           <div class="control">
-            <button class="button is-link">Submit</button>
+            <button class="button is-link" onclick="submitCreateDeck()">Create Deck</button>
           </div>
           {{!-- <div class="control">
             <button class="button is-link is-light">Cancel</button>
@@ -99,6 +99,9 @@
           My Deck
         </p>
 
+        <p class="subtitle my-3">
+          Front
+        </p>
         <div class="card">
           <div class="card-content">
             <p class="title is-4 d-none" id="front-heading">
@@ -119,7 +122,10 @@
           </div>
         </div>
 
-        <div class="card mt-6">
+        <p class="subtitle mt-6 my-3">
+          Back
+        </p>
+        <div class="card">
           <div class="card-content">
             <p class="title is-4 d-none" id="back-heading">
               My Heading
