--- a/views/flashcards.hbs
+++ b/views/flashcards.hbs
@@ -1,2 +1,11 @@
-<h1>Flashcards</h1>
+{{> header}}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<center>
+    <h1>Flashcards</h1>
+    <div id="allcards"></div>
+</center>
+
+<script type="text/javascript">
+  deckid = "{{deckid}}";
+</script>
 <script src="/javascripts/flashcards.js"></script>
