--- a/views/flashcards.hbs
+++ b/views/flashcards.hbs
@@ -9,3 +9,4 @@
   deckid = "{{deckid}}";
 </script>
 <script src="/javascripts/flashcards.js"></script>
+<script src="/javascripts/commonfunctions.js"></script>
