update date api call

--- a/views/revise.hbs
+++ b/views/revise.hbs
@@ -13,9 +13,9 @@
         </label>
     </div>
     <div class="column" id="easiness">
-        <button class="button is-success" onclick="displayFlashcards()">Easy</button>
-        <button class="button is-warning" onclick="displayFlashcards()">Medium</button>
-        <button class="button is-danger" onclick="displayFlashcards()">Hard</button>
+        <button class="button is-success" id ="easy" onclick="displayFlashcards(this.id)">Easy</button>
+        <button class="button is-warning" id = "medium" onclick="displayFlashcards(this.id)">Medium</button>
+        <button class="button is-danger" id="hard" onclick="displayFlashcards(this.id)">Hard</button>
     </div>
 </div>
 <div class="modal" id="popup">
