--- a/views/createdeck.hbs
+++ b/views/createdeck.hbs
@@ -92,11 +92,11 @@
     <section class="section">
       <div class="container is-fluid">
         <p class="title">
-          Your Deck
+          Format of the flashcards in the deck
         </p>
 
         <p class="title is-4" id="deck-name">
-          My Deck
+          Deck Name
         </p>
 
         <p class="subtitle my-3">
@@ -105,10 +105,10 @@
         <div class="card">
           <div class="card-content">
             <p class="title is-4 d-none" id="front-heading">
-              My Heading
+              Heading
             </p>
             <p class="subtitle d-none" id="front-subheading">
-              My subheading
+              Subheading
             </p>
             <p id="front-para" class="d-none">
               This is a sample paragraph which shows us how a paragraph will appear on the flashcards of this deck.
@@ -117,7 +117,7 @@
               <img src="https://bulma.io/images/placeholders/128x128.png">
             </figure>
             <p class="subtitle" id="front-sample">
-              Sample Front Flashcard
+              Sample of the Front of the Flashcard
             </p>
           </div>
         </div>
@@ -128,10 +128,10 @@
         <div class="card">
           <div class="card-content">
             <p class="title is-4 d-none" id="back-heading">
-              My Heading
+              Heading
             </p>
             <p class="subtitle d-none" id="back-subheading">
-              My subheading
+              subheading
             </p>
             <p id="back-para" class="d-none">
               This is a sample paragraph which shows us how a paragraph will appear on the flashcards of this deck.
@@ -140,7 +140,7 @@
               <img src="https://bulma.io/images/placeholders/128x128.png">
             </figure>
             <p class="subtitle" id="back-sample">
-              Sample Back Flashcard
+              Sample of the Back of the Flashcard
             </p>
           </div>
         </div>
