fixed issue with revise

--- a/views/revise.hbs
+++ b/views/revise.hbs
@@ -26,7 +26,7 @@
       <button class="delete" aria-label="close" id="close" onclick="onNo()"></button>
     </header>
     <section class="modal-card-body">
-      You've done great today! Do you want to practice tomorrow's cards too? 
+      You've done great today! Do you want to practice the next practice day's cards? 
     </section>
     <footer class="modal-card-foot">
       <button class="button is-success" id="yes" onclick="onYes()">Yes</button>
