--- a/views/decks.hbs
+++ b/views/decks.hbs
@@ -1,6 +1,7 @@
 {{> header}}
 <center>
     <h1 class ="allDecksHeading">List of all decks</h1>
+    <a href ="/createdeck/"><button class = "button is-primary" onclick = "addDeck()" style ="margin-bottom:20px" >ADD NEW DECK</button></a>
     <table id="tableOfDecks" class="table is-striped is-bordered is-hoverable is-fullwidth">
         <thead>
             <tr>
