--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -4,29 +4,9 @@
     <nav class="navbar">
       <div class="container">
         <div class="navbar-brand">
-          <a class="navbar-item">
+          <a class="navbar-item" href="/decks/">
             Flashcards
           </a>
-          <span class="navbar-burger burger nav-toggle" data-target="nav-menu" id="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div id="nav-menu" class="navbar-menu">
-          <div class="navbar-end">
-            <a class="navbar-item">
-              Home
-            </a>
-            <span class="navbar-item">
-              <a class="button is-primary is-inverted">
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>Button</span>
-              </a>
-            </span>
-          </div>
         </div>
       </div>
     </nav>
