--- a/views/deckreview.hbs
+++ b/views/deckreview.hbs
@@ -7,6 +7,7 @@
                 <th>Flashcard Number</th>
                 <th>Flashcard front</th>
                 <th>Next practice date</th>
+                <th>Go to card</th>
             </tr>
         </thead>
         <tbody>
